@@ -2971,7 +2971,7 @@ $ #Программа просмотра: изменить текущую поз
     Примеры:
 
       #50%, 10#                 Перейти на середину файла (50%), показ с 10-й колонки
-      #+0, +10#                 Увеличить отступ на 10 символов
+      #, +10#                 Увеличить отступ на 10 символов
 
 
 @ViewerSearch
