@@ -1,4 +1,10 @@
-﻿w17 19.02.2016 22:31:34 +0300 - build 4553
+﻿drkns 19.02.2016 21:58:30 +0200 - build 4554
+
+1. Уточнение 4552.
+
+2. VC2015 warning.
+
+w17 19.02.2016 22:31:34 +0300 - build 4553
 
 1. Уточнение 4552, восстановление сборки VS2010.
 
